# ur_sim_to_real_rl_games

./: LICENSE  README.md  package.xml  setup.cfg  setup.py
config/: real_robot.yaml  simulation.yaml
launch/: launch_gazebo.launch.py  real_robot.launch.py  simulation.launch.py
models/: reach_ur10.pth  reach_ur10_old.pth
ur_sim_to_real_rl_games/: controller.py  policy_node.py  pose_visualizer.py  target_pose_publisher.py
