<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur_sim_to_real_rl_games</name>
  <version>0.0.0</version>
  <description>Sim to real application for UR3 robot trained with RL Games library.</description>
  <maintainer email="k.yavuzkurt1@gmail.com">Kadir Yavuz Kurt</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <exec_depend>rclpy</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>torch</exec_depend>
    <exec_depend>rl_games</exec_depend>
    <exec_depend>transforms3d</exec_depend>
  </export>
</package>
